--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Calibri, Arial Helvetica;
+}
+
 body {
     background-color: #001433;
     color: #e1e4ea;
@@ -50,9 +54,11 @@ header nav > ul > li > a {
     text-decoration: none;
     transition: 0.3s;
     color: #e1e4ea;
+    outline: none;
 }
 
-header nav > ul > li:hover > a {
+header nav > ul > li:hover > a,
+header nav > ul > li > a:focus {
     color: #ffcc00;
 }
 
@@ -68,6 +74,11 @@ header nav > ul > li > input[type="search"] {
     padding: 4px 8px;
     background-color: #e1e4ea;
     border: none;
+    color: #001433;
+}
+
+header nav > ul > li > input[type="search"]:focus {
+    outline: 1px solid #ffcc00;
 }
 
 header nav > ul > li > input[type="search"]::placeholder {
@@ -82,4 +93,104 @@ main > .sub-page {
 
 main > .sub-page:target {
     display: block;
+}
+
+.form {
+    text-align: left;
+    margin: auto;
+    width: 400px;
+}
+
+.indentedList {
+    margin-left: 20px;
+}
+
+label:not([for]) {
+    display: block;
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+
+label[for] {
+    margin-right: 15px;
+    font-size: 18px;
+    width: min-content;
+    white-space: nowrap;
+}
+
+input[type="checkbox"] + label.checkbox {
+    outline: none;
+    display: block;
+    cursor: pointer;
+}
+
+input[type="checkbox"] + label.checkbox::before {
+    content: "";
+    font-size: 10px;
+    width: 14px;
+    height: 14px;
+    background-color: #e1e4ea;
+    color: #001433;
+    display: inline-block;
+    text-align: center;
+    font-weight: bolder;
+    overflow: hidden;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+input[type="checkbox"] + label.checkbox:focus:before {
+    outline: 1px solid #ffcc00;
+}
+
+input[type="checkbox"]:checked + label::before {
+    content: "\2713";
+}
+
+label.required::after {
+    content: '*';
+    color: #cc0000;
+    margin-left: 2px;
+}
+
+input[type="text"],
+input[type="number"] {
+    width: 250px;
+    padding: 4px 8px;
+    border-radius: 6px;
+    outline: none;
+    background-color: #e1e4ea;
+    color: #001433;
+    border: none;
+    font-size: 14px;
+}
+
+input[type="text"]::placeholder,
+input[type="number"]::placeholder {
+    color: #697d96;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus {
+    outline: 1px solid #ffcc00;
+}
+
+input[type="number"].amountInput {
+    width: 70px;
+}
+
+input[type="text"].unitInput {
+    width: 28px;
+}
+
+input[type="text"].ingredientInput {
+    width: 160px;
+}
+
+input[type="text"].inputMethodInstructions {
+    width: 160px;
+    word-wrap: break-word;
+}
+
+input[type="checkbox"] {
+    display: none;
 }
